fix tabs spacing

--- a/web/app/themes/juniper-theme/blocks/split-text-image/style.css
+++ b/web/app/themes/juniper-theme/blocks/split-text-image/style.css
@@ -7,6 +7,7 @@
     top: 0;
     clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
     width: 100%;
+    height: 100%;
 }
 
 .dark-style .text-inner h2 {
